<resources>
    <string name="app_name">Simple Progress</string>
    <string name="action_settings">Settings</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="name">Name:</string>
    <string name="goal">Goal:</string>
    <string name="addIcon">+</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="entryHint">Completed</string>
    <string name="commentHint">Comment(optional)</string>
    <string name="sixtyHint">/60 (optional)</string>
    <string name="date">Date:</string>
    <string name="hours">Completed:</string>
    <string name="save">Save</string>
    <string name="addTask">Add Task</string>
    <string name="deleteTask">Delete Task</string>
    <string name="editTask">Edit Task</string>
    <string name="reoccurs">Reoccurs </string>
    <string name="hello">Hello!</string>
    <string name="getStartedTasks">Add a task from the toolbar ( + ) to get started!</string>
    <string name="getStartedGoals">Set a numerical goal to progress towards.</string>
    <string name="comment">Comment:</string>
    <string name="taskHistoryMsg">Oops!</string>
    <string name="taskHistoryMsg2">Graph history will be coming soon!</string>
    <string-array name="contextMenu">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string name="title_activity_add_task">Add Task</string>
    <string name="title_activity_add_entry">Add Entry</string>
    <string name="title_activity_view_task">View Task</string>
    <string name="title_activity_edit_entry">Edit Entry</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="title_activity_view_task_overview">ViewTaskOverviewActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
